--- a/styles.css
+++ b/styles.css
@@ -154,13 +154,13 @@ h2 {
     background-color: #000000;
     box-shadow: 5px 5px 5px #ff0099;
     color: #ff0099;
+    gap: 10px;
 }
 
 .game-notes-container {
     display: flex;
-    border: black 1px solid;
+    border: #ff0099 1px solid;
     height: 300px;
-    padding: 0 20px;
 }
 
 .piano-key-channel {
@@ -168,20 +168,37 @@ h2 {
     flex-direction: column;
     flex-grow: 1;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: flex-end;
 }
 
 .black-key-channel {
     width: 40%;
     left: 50%;
     position: relative;
+    opacity: 0.5;
+}
+.target-note {
+    height: 50px;
+    transition: 2000ms, ease;
+
 }
 
+.white-note-target {
+    width: 80%;
+    background-color: #ff0099;
+    border-radius: 20px;
+}
+
+.black-note-target {
+    width: 100%;
+    background-color: #1DB8DF;
+    border-radius: 20px;
+}
 .piano-key-container {
     display: flex;
     border: black 1px solid;
     height: 300px;
-    padding: 0 20px;
+
 }
 
 .piano-key {
@@ -241,24 +258,4 @@ footer a:hover {
     background-color: #64e30b;
 }
 
-.target-note {
-    width: 100%;
-    height: 50px;
-    background-color: #1DB8DF;
-    position: relative;
-}
 
-.white-note-target {
-
-    background-color: #ff0099;
-    border-radius: 20px;
-}
-
-.black-note-target {
-    background-color: #1DB8DF;
-    border-radius: 20px;
-}
-
-.note-inbound {
-
-}
