--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,6 @@ footer a:hover {
 .target-note {
     width: 100%;
     height: 50px;
-    background-color: #1DB8DF;
     position: relative;
 }
 
@@ -297,4 +296,12 @@ footer a:hover {
 .black-note-target {
     background-color: #1DB8DF;
     border-radius: 20px;
+}
+
+.target-missed {
+    background-color: red;
+}
+
+.target-hit {
+    background-color: green;
 }
